# brain-tumor-detection

./: .dockerignore  .gitignore  README.md  TODO.md  main.py  models.dvc  pyproject.toml
.dvc/: config
docker/: Dockerfile  docker-compose.yml
notebooks/: 00-test-cuda.ipynb  01-eda.ipynb  02-model-training-and-validation.ipynb  02-model-training-tensorflow.ipynb  03-model-evaluation.ipynb  03-model-testing-and-evaluation.ipynb  eda.ipynb  model-training-tensorflow.ipynb
templates/: index.html
