[project]
name = "brain-tumor-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "ipykernel>=7.2.0",
    "jax[cuda13]>=0.10.0",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.21.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
